--- a/roc-node/node.ini
+++ b/roc-node/node.ini
@@ -3,14 +3,19 @@ level = TRACE
 
 
 [monitor]
-#jobname = node-monitor
-#bin = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/roc-node-monitor
-#conf = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/m.ini
+jobname = node-monitor
+bin = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/roc-node-monitor
+conf = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/m.ini
 
 [node]
-job_list = job01
+job_list = job01,job02
 
 
 [job01]
 cmd = sh
-args = /home/fenggx/shawn_go2/src/roc/roc-node/jobs/c2.sh
+args = jobs/c_loop.sh
+
+
+[job02]
+cmd = sh
+args = jobs/c_loop.sh
