node port output file

--- a/roc-node/node.ini
+++ b/roc-node/node.ini
@@ -8,6 +8,7 @@ bin = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/roc-node-monitor
 conf = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/m.ini
 
 [node]
+port = ./log/log
 job_list = job01,job02
 
 
