roc node rebuild

--- a/roc-node/node.ini
+++ b/roc-node/node.ini
@@ -9,7 +9,7 @@ conf = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/m.ini
 
 [node]
 port = ./log/log
-job_list = job01,job02
+job_list =job03,job04
 
 
 [job01]
@@ -20,3 +20,13 @@ args = jobs/c_loop.sh
 [job02]
 cmd = sh
 args = jobs/c_loop.sh
+
+
+[job03]
+cmd = sh
+args = jobs/c_loop.sh
+
+[job04]
+cmd = sh
+args = jobs/c_loop.sh
+
