add roc jobkey support

--- a/roc-node/node.ini
+++ b/roc-node/node.ini
@@ -4,18 +4,19 @@ level = TRACE
 
 [monitor]
 jobname = node-monitor
-bin = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/roc-node-monitor
-conf = /home/fenggx/shawn_go2/src/roc/roc-node-monitor/m.ini
+bin = /home/fenggx/shawn_go/src/github.com/shawnfeng/roc/roc-node-monitor/roc-node-monitor
+conf = /home/fenggx/shawn_go/src/github.com/shawnfeng/roc/roc-node-monitor/m.ini
 
 [node]
 port = ./log/log
-job_list =job03,job04
+job_list =job01,job03,job04
 
 
 [job01]
 cmd = sh
 args = jobs/c_loop.sh
-
+needjobkey=true
+jobkey = ffffff
 
 [job02]
 cmd = sh
