job 标准输出标准错误输出支持输入到文件

--- a/roc-node/node.ini
+++ b/roc-node/node.ini
@@ -23,9 +23,11 @@ cmd = sh
 args = jobs/c_loop.sh
 
 
+
 [job03]
 cmd = sh
-args = jobs/c_loop.sh
+args = jobs/c_exit1.sh
+stdlog = ./a/a/aa/aaa
 
 [job04]
 cmd = sh
