对于执行进程返回status为0的也执行退避过程

--- a/roc-node/node.ini
+++ b/roc-node/node.ini
@@ -9,7 +9,7 @@ conf = /home/fenggx/shawn_go/src/github.com/shawnfeng/roc/roc-node-monitor/m.ini
 
 [node]
 port = ./log/log
-job_list =job01,job03,job04
+job_list =job01,job03,job04,job05
 
 
 [job01]
@@ -32,4 +32,10 @@ stdlog = ./a/a/aa/aaa
 [job04]
 cmd = sh
 args = jobs/c_loop.sh
+
+
+[job05]
+cmd = redis-server
+args = ./redis0.conf
+
 
