增加不通过monitor监控的job选项，另外开启了reload配置时候monitor重启

--- a/roc-node/node.ini
+++ b/roc-node/node.ini
@@ -6,10 +6,11 @@ level = TRACE
 jobname = node-monitor
 bin = /home/fenggx/shawn_go/src/github.com/shawnfeng/roc/roc-node-monitor/roc-node-monitor
 conf = /home/fenggx/shawn_go/src/github.com/shawnfeng/roc/roc-node-monitor/m.ini
+#disable_list = job01,job04
 
 [node]
 port = ./log/log
-job_list =job01,job03,job04,job05
+job_list =job01,job03,job04
 
 
 [job01]
